--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="profile" href="https://gmpg.org/xfn/11">
-<!-- GIT ADD -->
+<!-- GIT ADD 2 -->
 <title>Planet Box &#8211; The Design Hub</title>
 <meta name="robots" content="max-image-preview:large">
 <link rel="dns-prefetch" href="//www.youtube.com">
